--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "postinstall": "electron-builder install-app-deps"
     },
     "dependencies": {
+        "daisyui": "^1.14.2",
         "electron-reload": "^1.5.0",
         "electron-squirrel-startup": "^1.0.0",
         "sirv-cli": "^1.0.0"
